@@ -1,3 +1,15 @@
+2011-10-11  Yuqiang Xian  <yuqiang.xian@intel.com>
+
+        Add missing copyright notice in DFG JIT files
+        https://bugs.webkit.org/show_bug.cgi?id=69809
+
+        Reviewed by Gavin Barraclough.
+
+        * dfg/DFGJITCodeGenerator32_64.cpp:
+        * dfg/DFGJITCompiler32_64.cpp:
+        * dfg/DFGJITCompilerInlineMethods.h:
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+
 2011-10-10  Filip Pizlo  <fpizlo@apple.com>
 
         DFG JSVALUE64 spill/fill code should not box integers and doubles
